k8s/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudforge-demo

spec:
  selector:
    app: cloudforge-demo

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
