k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudforge-demo

spec:
  ingressClassName: nginx

  rules:
    - host: cloudforge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudforge-demo
                port:
                  number: 80
